[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4"
petgraph = "0.5"

[dev-dependencies]
spectral = "0.6"
assert_cmd = "1.0"